--- a/auto-simulator/src/main/resources/public/main.css
+++ b/auto-simulator/src/main/resources/public/main.css
@@ -1,6 +1,44 @@
-  	.container, .vehicle-info-container {
+body {
+	background-color: #ecefef;
+}
+
+.header {
+	background-color: #222222;
+	color: #eeeeee;	
+	padding: 5px 100px;	
+}
+
+.header label {
+	margin-left:10px;
+	font-size: 18px;
+}
+
+.container, .vehicle-info-container {
   		height:100%;
-  	}
+}
+
+.panel-primary {
+	border-color: #10786e;	
+}
+
+.nav-pills>li.active>a, 
+.nav-pills>li.active>a:focus, 
+.nav-pills>li.active>a:hover {
+    color: #fff;
+    background-color: #10786e;
+}
+
+a:focus,
+a:hover,
+a {
+	color: #00a79c;
+}
+
+.btn-primary,
+.panel-primary .panel-heading {
+	background-image: none;
+	background-color: #10786e !important;	
+}
 
 .logo {
 	height:auto;
@@ -29,6 +67,8 @@
 .main-content-row {
 	height: 70%;
 	margin-top: 20px;
+	background-color: #f5f5f5;
+	padding: 15px 0;
 }
 
 .list-group-item {
